# fuji

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pull_request.yml
scripts/unix/: exiftool.sh
scripts/windows/: exiftool.bat
src/: lib.rs
src/exif/: mod.rs
src/exiftool/: spawn.rs
src/recipe/: builder.rs  mod.rs  read.rs
src/recipe/from_exif/: clarity.rs  color.rs  color_chrome_effect.rs  color_chrome_fx_blue.rs  d_range_priority.rs  dynamic_range.rs  film_simulation.rs  fujifilm_recipe_details.rs  grain_effect.rs  high_iso_noise_reduction.rs  monochromatic_color.rs  sharpness.rs  tone_curve.rs  trans_sensor.rs  white_balance.rs  white_balance_shift.rs
src/recipe/str/: clarity.rs  color.rs  color_chrome_effect.rs  color_chrome_fx_blue.rs  film_simulation.rs  grain_effect.rs  high_iso_noise_reduction.rs  monochromatic_color.rs  monochromatic_shift.rs  sharpness.rs  tone_curve.rs  wb_shift.rs  white_balance.rs
src/utils/: extension.rs  mod.rs
test-utilities/: Cargo.toml
test-utilities/src/: lib.rs
tests/: test_jpeg.rs  test_raf.rs
