[package]
name = "fuji"
version = "0.1.2"
edition = "2021"
description = "A library to read Fujifilm Recipes & Exif Metadata from a JPEG or RAF file using exiftool."
license = "Apache-2.0"
keywords = ["fujifilm", "recipe", "exif", "metadata"]
exclude = [".github", "tests/**/*.RAF", "scripts", "deps"]

[dependencies]
log = "~0.4.26"
once_cell = "~1.20.3"
regex = "~1.11.1"
serde = { version = "~1.0.218", features = ["derive"] }
serde_json = "~1.0.139"
snafu = "~0.8.5"
strum = "~0.27.1"
strum_macros = "~0.27.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-utilities = { path = "test-utilities" }
